--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ java {
 	}
 }
 
+jib {
+	to {
+		image = 'registry.heroku.com/allreps/web' // Nome da imagem de destino para o Heroku Container Registry
+	}
+	container {
+		ports = ['8080'] // Porta em que sua aplicação vai rodar
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -31,7 +40,7 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.28'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'org.postgresql:postgresql:42.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
