--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=allreps
 
 server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/allreps
-spring.datasource.username=admin
-spring.datasource.password=123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 
 # Configura o nível de log para INFO no root logger
 logging.level.root=INFO
