--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=allreps
 
 server.port=${PORT:8080}
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-crkef70gph6c73c8srvg-a.oregon-postgres.render.com:5432/allrepsdb
+spring.datasource.username=allrepsdb_user
+spring.datasource.password=W56GDLX5uH353L3j7t9RMxiu2ntDYSjI
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
